--- a/rules/sample.emailsample.yaml
+++ b/rules/sample.emailsample.yaml
@@ -1,19 +1,19 @@
 ---
 name: Sample
-description: "Rule which sends an email when an email from johndoe@gmail.com is received"
+description: "Rule which sends an email when an email from vishal.gondil@gmail.com is received"
 pack: email
 enabled: false
 trigger:
-  type: email.imap.message
+  type: email.smtp.message
   parameters: {}
 criteria:
   trigger.from:
-    pattern: johndoe@gmail.com
+    pattern: vishal.gondil@gmail.com
     type: contains
 action:
   ref: core.sendmail
   parameters:
     body: 'We received an email'
-    to: janedoe@gmail.com
-    from: stackstorm@yourcompanyname.com
+    to: vishal.gondil@gmail.com
+    from: vishal.gondil@gmail.com
     subject: 'Email Received'
